--- a/my.kv
+++ b/my.kv
@@ -1,3 +1,6 @@
+
+<MyTextInput>:
+
 <MyBoxLayout>:
 	orientation: 'vertical'
 	Label:
@@ -8,3 +11,5 @@
 		text: 'z-coordinate readout:'
 	Button:
 		text: 'Submit'
+
+	
