updated controller to add listener for hardware interface. added tab to switch text input

--- a/gui.kv
+++ b/gui.kv
@@ -7,6 +7,7 @@ Controller:
         TextInput:
             id: x
             multiline: False
+            write_tab: False
     GridLayout:
         cols: 1
         Label:
@@ -14,6 +15,7 @@ Controller:
         TextInput:
             id: y
             multiline: False
+            write_tab: False
     GridLayout:
         cols: 1
         Label:
@@ -21,6 +23,7 @@ Controller:
         TextInput:
             id: w
             multiline: False
+            write_tab: False
     Button:
         id: btn
         text: "submit"
