gui text size for video

--- a/gui.kv
+++ b/gui.kv
@@ -4,27 +4,34 @@ Controller:
         cols: 1
         Label:
             text: "X"
+            font_size: 26
         TextInput:
             id: x
             multiline: False
             write_tab: False
+            font_size: 26
     GridLayout:
         cols: 1
         Label:
             text: "Y"
+            font_size: 26
         TextInput:
             id: y
             multiline: False
             write_tab: False
+            font_size: 26
     GridLayout:
         cols: 1
         Label:
             text: "W"
+            font_size: 26
         TextInput:
             id: w
             multiline: False
             write_tab: False
+            font_size: 26
     Button:
         id: btn
         text: "submit"
+        font_size: 26
         on_release: root.submitCoordinates()
